--- a/frontAcadem/src/app/views/main/main.component.html
+++ b/frontAcadem/src/app/views/main/main.component.html
@@ -1,33 +1,73 @@
-<mat-sidenav-container style="width: 100%; height: 100%">
+<p class="fixed-top">
+  <mat-toolbar color="primary">
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <span>Академия роста</span>
+    <span class="example-spacer"></span>
+    <button mat-icon-button [matMenuTriggerFor]="menu" class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+      <mat-icon>language</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item (click)="changeLanguage('ru')">ru</button>
+      <button mat-menu-item (click)="changeLanguage('kg')">kg</button>
+    </mat-menu>
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+      <mat-icon>account_circle</mat-icon>
+    </button>
+  </mat-toolbar>
+</p>
+<!--<mat-toolbar color="primary" class="fixed-top">-->
+<!--  <img src="../assets/logo_light.png" routerLink="/main" style="width: 140px">-->
+
+<!--  <span class="spacer"> </span>-->
+
+<!--  <button *ngIf="!isLoggedIn" matTooltip="Login" routerLink="/login" mat-icon-button-->
+<!--          class="example-icon favourite-icon">-->
+<!--    <mat-icon>login</mat-icon>-->
+<!--  </button>-->
+
+<!--  <button *ngIf="isLoggedIn" [matMenuTriggerFor]="menu" matTooltip="Profile" mat-icon-button>-->
+<!--    <mat-icon>account_box</mat-icon>-->
+<!--  </button>-->
+<!--  <mat-menu id="menu-item" #menu="matMenu">-->
+<!--    <button mat-menu-item routerLink="/profile">Profile</button>-->
+<!--    <button (click)="logout()" mat-menu-item>Logout</button>-->
+<!--  </mat-menu>-->
+<!--</mat-toolbar>-->
+
+<mat-sidenav-container *ngIf="isLoaded" style="width: 100%; height: 100%">
   <mat-sidenav class="position-fixed" mode="side" opened>
-    <mat-list style="margin-top: 60px">
-      <mat-chip-list>
-
-        <mat-list-item>
-          <div class="d-flex align-items-center">
-            <mat-chip (click)="main()">
-              <mat-icon class="example-icon" style="margin-right: 20px">group</mat-icon>
-              My groups
-            </mat-chip>
-          </div>
-        </mat-list-item>
-
-        <mat-list-item>
-          <div class="d-flex align-items-center">
-            <mat-chip (click)="trenajer()">
-              <mat-icon class="example-icon" style="margin-right: 22px">123</mat-icon>
-              Trenajer
-            </mat-chip>
-          </div>
-        </mat-list-item>
-
-      </mat-chip-list>
-    </mat-list>
+    <aside>
+      <p> Menu </p>
+      <a href="javascript:void(0)" class="menu-container" (click)="main()">
+        <mat-icon>group</mat-icon>
+        {{'MY GROUPS'|translationPipe:language}}
+      </a>
+      <a href="javascript:void(0)" class="menu-container" (click)="teachers()">
+        <mat-icon class="example-icon">contact_mail</mat-icon>
+        {{'TEACHERS'|translationPipe:language}}
+      </a>
+      <a href="javascript:void(0)" class="menu-container" (click)="pupils()">
+        <mat-icon class="example-icon">supervised_user_circle</mat-icon>
+        {{'PUPILS'|translationPipe:language}}
+      </a>
+      <a href="javascript:void(0)" class="menu-container" (click)="trenajer()">
+        <mat-icon class="example-icon">extension</mat-icon>
+        {{'TRAINING'|translationPipe:language}}
+      </a>
+    </aside>
   </mat-sidenav>
   <mat-sidenav-content>
     <div *ngIf="selectedComponent">
-      <app-groups-viewer *ngIf="selectedComponent == 'main'" (selectedGroup)="handleMyEvent($event)"></app-groups-viewer>
-      <app-group-details *ngIf="selectedComponent == 'details'" [group]="selectedGroup"></app-group-details>
+      <app-groups-viewer *ngIf="selectedComponent == 'main'" [lang]="language"
+                         (selectedGroup)="handleGroupEvent($event)"></app-groups-viewer>
+      <app-group-details *ngIf="selectedComponent == 'groupDetails'" [groupName]="selectedGroup.name" [role]="role"
+                         (uploadUser)="handleUserEvent($event)"></app-group-details>
+      <app-userdetails *ngIf="selectedComponent == 'userDetails'" [user]="uploadUser"
+                       (selectedGroup)="handleGroupEvent($event)"></app-userdetails>
+      <app-users-viewer *ngIf="selectedComponent == 'users'" [role]="userViewerRole"
+                        (uploadUser)="handleTeacherEvent($event)"></app-users-viewer>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
