multiLanguage module ADD to all pages

--- a/frontAcadem/src/app/views/admin/creations/create-timetable-modal/create-timetable-modal.component.html
+++ b/frontAcadem/src/app/views/admin/creations/create-timetable-modal/create-timetable-modal.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-  <h1>Schedule</h1>
+  <h1>{{"TIMETABLE"| translationPipe:lang}}</h1>
   <form [formGroup]="timetableForm">
     <div class="day-container">
-      <div class="day">Monday</div>
+      <div class="day">{{"MONDAY"| translationPipe:lang}}</div>
       <mat-form-field>
         <input matInput formControlName="mondayHH" type="number" class="timepicker" placeholder="HH">
       </mat-form-field>
@@ -11,7 +11,7 @@
       </mat-form-field>
     </div>
     <div class="day-container">
-      <div class="day">Tuesday</div>
+      <div class="day">{{"TUESDAY"| translationPipe:lang}}</div>
       <mat-form-field>
         <input matInput formControlName="tuesdayHH" type="number" class="timepicker" placeholder="HH">
       </mat-form-field>
@@ -20,7 +20,7 @@
       </mat-form-field>
     </div>
     <div class="day-container">
-      <div class="day">Wednesday</div>
+      <div class="day">{{"WEDNESDAY"| translationPipe:lang}}</div>
       <mat-form-field >
         <input matInput formControlName="wednesdayHH" type="number" class="timepicker" placeholder="HH">
       </mat-form-field>
@@ -29,7 +29,7 @@
       </mat-form-field>
     </div>
     <div class="day-container">
-      <div class="day">Thursday</div>
+      <div class="day">{{"THURSDAY"| translationPipe:lang}}</div>
       <mat-form-field >
         <input matInput formControlName="thursdayHH" type="number" class="timepicker" placeholder="HH">
       </mat-form-field>
@@ -38,7 +38,7 @@
       </mat-form-field>
     </div>
     <div class="day-container">
-      <div class="day">Friday</div>
+      <div class="day">{{"FRIDAY"| translationPipe:lang}}</div>
       <mat-form-field >
         <input matInput formControlName="fridayHH" type="number" class="timepicker" placeholder="HH">
       </mat-form-field>
@@ -47,7 +47,7 @@
       </mat-form-field>
     </div>
     <div class="day-container">
-      <div class="day">Saturday</div>
+      <div class="day">{{"SATURDAY"| translationPipe:lang}}</div>
       <mat-form-field>
         <input matInput formControlName="saturdayHH" type="number" class="timepicker" placeholder="HH">
       </mat-form-field>
@@ -56,7 +56,7 @@
       </mat-form-field>
     </div>
     <div class="day-container">
-      <div class="day">Sunday</div>
+      <div class="day">{{"SUNDAY"| translationPipe:lang}}</div>
       <mat-form-field>
         <input matInput formControlName="sundayHH" type="number" class="timepicker" placeholder="HH">
       </mat-form-field>
@@ -64,9 +64,9 @@
         <input matInput formControlName="sundayMM" type="number" class="timepicker" placeholder="mm">
       </mat-form-field>
     </div>
-    <div id = "controls" class="row">
+    <div style="display: flex;justify-content: center;align-items: center;">
       <button style="width: 20%" [disabled]="timetableForm.invalid" (click)="save();closeDialog()" mat-flat-button color="primary">
-        Save
+        {{"SAVE" | translationPipe:lang}}
       </button>
     </div>
   </form>
