--- a/frontAcadem/src/app/views/common/group-details/group-details.component.css
+++ b/frontAcadem/src/app/views/common/group-details/group-details.component.css
@@ -19,39 +19,17 @@ header p {
   margin-top: 40px;
 }
 
-/*.students h2 {*/
-/*  font-size: 24px;*/
-/*  font-weight: bold;*/
-/*  margin-bottom: 10px;*/
-/*}*/
+.students h2 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
 
-/*.students table {*/
-/*  border-collapse: collapse;*/
-/*  width: 100%;*/
-/*}*/
-
-/*.students th,*/
-/*.students td {*/
-/*  border: 1px solid #ddd;*/
-/*  padding: 8px;*/
-/*  text-align: center;*/
-/*}*/
-
-/*.students th {*/
-/*  background-color: #f2f2f2;*/
-/*  font-size: 18px;*/
-/*  font-weight: bold;*/
-/*}*/
-
-/*.students tr:hover {*/
-/*  background-color: #f5f5f5;*/
-/*}*/
 
 .add-student-button {
   background-color: #4CAF50;
   border: none;
   color: white;
-  /*padding: 12px 24px;*/
   height: 40px;
   text-align: center;
   text-decoration: none;
@@ -155,10 +133,10 @@ body{
 }
 h2{
   text-align: center;
-  font-size: 18px;
+  font-size: 23px;
   text-transform: uppercase;
   letter-spacing: 1px;
-  color: white;
+  color: black;
   padding: 30px 0;
 }
 
