--- a/frontAcadem/src/app/views/common/groups-viewer/groups-viewer.component.css
+++ b/frontAcadem/src/app/views/common/groups-viewer/groups-viewer.component.css
@@ -51,7 +51,7 @@ body {
   padding: 20px;
   width: 400px;
   min-height: 200px;
-  display: grid;
+  /*display: grid;*/
   grid-template-rows: 20px 50px 1fr 50px;
   border-radius: 10px;
   box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
@@ -97,12 +97,18 @@ body {
 }
 
 .card__title {
+  margin: 0;
   font-size: 2rem;
   grid-row: 3/4;
   font-weight: 400;
   color: #ffffff;
 }
-
+.group_name{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 20px;
+}
 .card__apply {
   grid-row: 4/5;
   align-self: center;
@@ -136,4 +142,17 @@ body {
   .cards {
     justify-content: center;
   }
+}
+h1 {
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+  padding: 20px;
 }
