--- a/frontAcadem/src/app/views/common/groups-viewer/groups-viewer.component.css
+++ b/frontAcadem/src/app/views/common/groups-viewer/groups-viewer.component.css
@@ -156,3 +156,12 @@ h1 {
   height: 50px;
   padding: 20px;
 }
+.button {
+  padding: 10px;
+  font-size: 16px;
+  color: #ffffff;
+  background-color: #4CAF50;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
